# Doniczka

./: README.md
FW/: CMakeLists.txt  Makefile  Readme.md  sdkconfig
FW/cmd/: ascii_art.h  cmd.c  cmd.h  console_interface.c  console_interface.h
FW/inputs/: humidity_sensor.c  humidity_sensor.h  temperature_sensor.c  temperature_sensor.h  water_tank_meas.c  water_tank_meas.h
FW/main/: CMakeLists.txt  main.c
FW/mcu/: partitions.csv  pinout.h
FW/outputs/: cooling_pump_control.c  cooling_pump_control.h  cooling_ventilator_control.c  cooling_ventilator_control.h  dehumyfing_ventilator_control.c  dehumyfing_ventilator_control.h  peltier_power_control.c  peltier_power_control.h  watering_pump_control.c  watering_pump_control.h
MECH/: AS 1427 - M2,5 x 25(5) II.ipt  AS 1427 - M2,5 x 4(5) II.ipt  AS 1427 - M3 x 10(5) II.ipt  AS 1427 - M3 x 6(5) II.ipt  AS 1427 - M3,5 x 40(5) II.ipt  Base.ipt  Case.ipt  Footer.ipt  Oring.ipt  PCB.ipt  README.md  Tank resistive sensor.ipt  air_duct_clap.ipt  air_duct_inside.ipt  capacity_water_level_sensor.ipt  pump_in_water_tank.ipt  radiator.ipt  screw_oring.ipt  water_inlet.ipt  water_tank_flap.ipt
MECH/Components/: BMP280.ipt  DHT21.ipt  ds18b20_.ipt  peltier.ipt  pump.ipt  water_block.ipt
MECH/Components/cooler/: A_DNG v4.ipt  Część12.ipt  GRF v5.ipt  Pipe v6 (1).ipt  Pipe v6.ipt  S_SN v4 (1).ipt  S_SN v4.ipt  VR v4 (1).ipt  VR v4.ipt  V_DNG v6.iam  cooler.iam
MECH/Components/fan_40x40/: Blades FD1240.ipt  Body FD1240.ipt  fan_40x40.iam
MECH/Components/fan_80x80/: fan_80x80.iam
(+13 files in other folders)
